--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     implementation "android.arch.lifecycle:extensions:$room_version"
@@ -35,4 +33,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.github.jrvansuita:MaterialAbout:+'
+    implementation 'io.supercharge:shimmerlayout:2.1.0'
 }
