--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ android:
     - extra-google-m2repository 
     - addon-google_apis-google-24 
 BEFORE_INSTALL: 
+- yes | sdkmanager "platforms;android-27"
 - ​​chmod + x gradlew 
 - export JAVA8_HOME = / usr / lib / jvm / java-8-oracle 
 - export JAVA_HOME = $ JAVA8_HOME 
