--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ android:
     - addon-google_apis-google-27
 BEFORE_INSTALL: 
 - yes | sdkmanager "platforms;android-27"
+- yes | sudo sdkmanager --licenses
 - ​​chmod + x gradlew 
 - export JAVA8_HOME = / usr / lib / jvm / java-8-oracle 
 - export JAVA_HOME = $ JAVA8_HOME 
