--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
           - v1-dependencies-
 
       - run: gradle dependencies
+	command: ./gradlew androidDependencies
 
       - save_cache:
           paths:
